отработка снипетов внутри корзины

--- a/README
+++ b/README
@@ -6,6 +6,14 @@
 
 Полноценного развития данного решение не будет так как в самом разгаре разработка собственного решения bid-cart.
 
+
+
+текущая версии 1.3.6RC  (01.05.2013)
+=======================================================
+- отработка снипетов внутри корзины (спасибо Bumkaka)
+
+
+
 внутри добавленно: 
 -ShopKeeper
 -CatalogFill
